# tidb-agentx-hackathon

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  BRANCH_PUSH_SUMMARY.md  CLOUDBUILD_GITHUB_FINAL_DIAGNOSTIC.md  CLOUDBUILD_GITHUB_LLM_WRAPPER.md  CLOUDBUILD_GITHUB_PROBLEM_SPORE.md  COMPREHENSIVE_ARTIFACT_ANALYSIS_PROGRESS_SUMMARY.md  COMPREHENSIVE_ARTIFACT_ANALYSIS_SUMMARY.md  COMPREHENSIVE_PROJECT_AUDIT_SUMMARY.md  CURRENT_STATE_SUMMARY.md  DEMO_FOCUSED_ARCHITECTURE_SUMMARY.md  DIVERSITY_HYPOTHESIS_CARD 2.md  ENHANCED_AST_LEVEL_UP_SUMMARY.md  ENHANCED_ROUND_TRIP_SUCCESS.md  FINAL_COMMIT_SUMMARY.md  GHOSTBUSTERS_ANALYSIS_REQUEST.md  GITHUB_CLOUD_BUILD_SETUP 2.md  HACKATHON_COORDINATION_PLAN 2.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_MIGRATION_SUMMARY.md  LLM_IDENTITY_CRISIS_RESEARCH_MODEL.md  MAKE_ONLY_ENFORCEMENT_SUMMARY.md  MASTER_PR_LOG.md  MEMORY_MANIFEST.md  MERGE_CONFLICT_ANALYSIS 2.md  MODEL_DRIVEN_CONFIGURATION_ANALYSIS.md  MODEL_DRIVEN_PROJECTION_COMPONENT_COMPLETE.md  Makefile  NOTES 2.md  PRE_COMMIT_CLEANUP_SUMMARY.md  PROJECT_MANAGEMENT_DOMAIN_ADDITION_SUMMARY.md  PR_1_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  PR_3_model_driven_orchestration.md  PR_5_model_persistence.md  PR_6_healthcare_cdc_implementation.md  PR_9_OPENFLOW_STREAMLIT_APP_IMPLEMENTATION.md  PR_DESCRIPTION.md  (+326 more)
.github/: copilot-instructions.md
checkpoints/: ast_models_20250802_182527.json  ast_models_20250802_182528.json
config/: .pre-commit-config.yaml  .yaml-lint-ignore  Openflow-Playground 2.yaml  artifact_forge_requirements 2.txt  config.env 2.example  requirements_diversity.txt
data/: PR_Dashboard.html  billing_discrepancy_analysis.json  cost_analysis.py  diversity_analysis_report.html  diversity_hypothesis_final_report.json  diversity_hypothesis_test_report 2.json  duet_ai_analysis.json  gcp_billing_analysis.json  synthesis_data.json
diversity-hypothesis/: .cursorrules  langgraph_diversity_orchestrator.py  multi_dimensional_results.json  multi_dimensional_smoke_test.py  pr1_diversity_vs_copilot_comparison.md
diversity_analysis_output/: analysis_data.json
docs/: ARTIFACTFORGE_FUTURE_PLANS.md  ARTIFACTFORGE_ISSUES_LOG 2.md  AST_LEVEL_UP_PLAN 2.md  AST_LEVEL_UP_PROGRESS.md  BRANCH_SEPARATION_SUMMARY.md  CALL_MORE_GHOSTBUSTERS_RULE.md  CI_CD_PIPELINE.md  COMPREHENSIVE_TEST_RESULTS.md  CONFLICT_RESOLUTION_SUMMARY.md  DIVERSITY_HYPOTHESIS_ORGANIZATION.md  DIVERSITY_HYPOTHESIS_SUMMARY.md  DOCUMENTATION_INDEX.md  GCP_DEPLOYMENT_SUCCESS.md  GCP_VS_AWS_IMPLEMENTATION_COMPARISON.md  GHOSTBUSTERS_ANALYSIS_RESPONSE 2.md  GHOSTBUSTERS_AWS_IMPLEMENTATION.md  GHOSTBUSTERS_CLOUD_EVALUATION.md  GHOSTBUSTERS_GCP_IMPLEMENTATION_PLAN.md  GITHUB_COPILOT_CODE_REVIEW_ANALYSIS 2.md  GITHUB_COPILOT_IMPLEMENTATION_PLAN.md  GITHUB_MCP_ANALYSIS.md  GITHUB_MCP_INTEGRATION_SUMMARY 2.md  GIT_ENHANCED_AST_LEVEL_UP.md  GIT_WORKFLOW_SUMMARY.md  HEALTHCARE_CDC_IMPLEMENTATION_PLAN.md  HEURISTIC_VS_DETERMINISTIC_PRINCIPLE.md  INTELLIGENT_LINTER_SYSTEM_SUMMARY 2.md  LEVEL1_IMPLEMENTATION_SUMMARY.md  MODEL_DRIVEN_PROJECTION_COMPONENT_COMPLETE 2.md  MODEL_MANAGER_GUIDE 2.md  NEO4J_SETUP_INSTRUCTIONS.md  ORGANIZATION_SUMMARY 2.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY 2.md  PHASE_3_IMPLEMENTATION_SUMMARY 2.md  PLATFORM_COMPATIBILITY 2.md  PR_10_PYTHON_TEST_FIXES.md  PR_17_Completion_Log.md  PR_1_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  (+16 more)
elmo-fuzzy-giggle/: DEPLOYMENT_SUMMARY.md  Dockerfile  cloudbuild.yaml  test_billing_api.py  test_cloudbuild_simple.py  test_ghostbusters_simple.py
examples/: agent_discovery_demo.py  redis_foundation_demo.py
hackathon/: HACKATHON_STATUS 2.md  README.md
healthcare-cdc/: README.md  __init__.py  healthcare_cdc_domain_model.py  test_healthcare_cdc_domain_model.py
models/: Openflow-Playground.yaml
project_management/: PROJECT_MANAGEMENT_IMPLEMENTATION_PLAN.md  README.md
prompts/: gemini_2_5_flash_lite_pr_review.md  gemini_2_5_preview_pr_review.md  gemini_2_5_preview_pr_review_actual 2.md
rules/: ide_performance_optimization.md  ide_performance_optimization.mdc
scripts/: actual_billing_analyzer.py  black_wrapper.sh  brutal_encoding_fixer 2.py  brutal_encoding_fixer.py  commit_and_push.py  create_proper_notebook.py  delete_all_cloud_functions.py  deploy-container 2.sh  deploy-container.sh  deploy-ghostbusters-gcp.sh  deploy.sh  duet_ai_billing_checker.py  enforce_make_only.sh  enforce_make_only_venv.sh  fix_code_quality.py  fix_mypy_issues.py  fix_subprocess_vulnerabilities.py  fix_test_indentation.py  flake8_wrapper.sh  gcp_billing_daily_reporter.py  gemini_gcp_billing_analyzer.py  ghostbusters_check 2.py  launch_billing_analysis.py  make_first_check.py  mdc-linter.py  mdc-linter.py 2.working  mdc-linter.py.backup4  mdc-linter.py.working  migrate_subprocess_to_secure_shell.py  model_driven_test_recovery.py  monitor_jupyter_logs 2.py  mypy_wrapper.sh  pre_test_model_check.py  pytest_wrapper.py  pytest_wrapper.sh  regenerate_mdc_files.py  restore_tools.sh  restore_tools_venv.sh  robust_file_reader.py  rule-compliance-check.sh  (+13 more)
src/: README.md  __init__.py  ast_usage_tracker.py  complete_linting_aware_generator.py  complete_model_generator.py  complex_model_generator.py  complex_model_simple_code_generator.py  dynamic_rule_updater.py  enhanced_linting_aware_model 2.py  enhanced_linting_aware_model.py  final_perfect_generator.py  generate_code_generator.py  generate_linting_aware_generator.py  ghostbusters_battle_visualizer.py  intelligent_linter_system.py  intelligent_model_generator.py  linter_api_integration 2.py  linter_api_integration.py  linting_aware_model.py  model_manager 2.py  model_manager.py  mypy_enhanced_ast_parser.py  perfect_ast_generator 2.py  perfect_ast_generator.py  perfect_code_generator.py  quick_state_explorer 2.py  recursive_code_generator 2.py  recursive_code_generator.py  round_trip_model_system 2.py  round_trip_model_system.py  scaled_complex_model_generator 2.py  ultimate_perfect_generator.py  verify_ide_linting_hypothesis.py
streamlit_app/: openflow_quickstart_app.py  (+1 more)
(+328 files in other folders)
